<resources>
    <string name="app_name">My Weather</string>
    <string name="information">Please, click on the ADD button in order to add city</string>
    <string name="save">SAVE</string>
    <string name="new_city">Add a city</string>
    <string name="message">Enter the name of the city you want to add:</string>
    <string name="add_city">City name</string>
	<string name="city">Paris</string>
    <string name="temp">20</string>
    <string name="feels">Feels like</string>
    <string name="feeltemp">15</string>
    <string name="min">Min.</string>
    <string name="mintemp">12</string>
    <string name="max">Max.</string>
    <string name="maxtemp">21</string>
    <string name="unit">°C</string>
    <string name="city_details">City Weather</string>
</resources>